force-app/main/default/objects/Phase__c/Phase__c.object-meta.xml
<CustomObject>
    <description>R3 Digital Project Phase</description>
    <label>Project Phase</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>