force-app/main/default/objects/Phase__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>