force-app/main/default/objects/Phase__c/fields/Is_Current_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Project__c</fullName>
    <formula>Project__c = LEFT( $Setup.R3_Settings__c.ProjectId__c , 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Project</label>
    <type>Checkbox</type>
</CustomField>