force-app/main/default/objects/Phase__c/fields/Total_Effort__c.field-meta.xml
<CustomField>
    <fullName>Total_Effort__c</fullName>
    <inlineHelpText>Total effort estimate (hours)</inlineHelpText>
    <label>Total Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>